  * Update d/rules to reflect the move of libfuzzer into compiler-rt
  * Update of the copyright file (Closes: #878502)
    Thanks to Nicholas D Steeves for the work
  * Try to fix the mipsel FTBFS (Closes: #877567)
    I am trying the first option from the bug:
    - gsplit-dward on 32 bits archs
    - -g everywhere
    Many thanks to Adrian Bunk for that

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 16 Oct 2017 10:24:33 +0200

llvm-toolchain-snapshot (1:6.0~svn315736-1) unstable; urgency=medium

  * New snapshot
  * Ship liblldMinGW lld lib
  * Ship clang-refactor & clang-func-mapping in clang-X.Y
  * Remove the -Wl option to call gold instead of the normal linker
    (Closes: #876787)
  * Force the deactivation of ocaml until the transition is done
  * Standards Version 4.1.0

  [ Gianfranco Costamagna ]
  * Enable ocaml on release architectures.
  * Add NDEBUG flag, lost in the -g -> -g1 switch

  [ Matthias Klose ]
  * Link with --no-keep-files-mapped --no-map-whole-files when using gold.
  * build using gold on arm64 and s390x. For backports, arm64 might still
    need the BFD linker, and building with only one or two processes in
    parallel.
  * On amd64, s390x, arm64 and ppc64el, build with -g1 instead of -g.
  * Set CMAKE_CXX_FLAGS_RELWITHDEBINFO and pass opt_flags.

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 11 Sep 2017 22:27:20 +0200

llvm-toolchain-snapshot (1:6.0~svn311834-2) unstable; urgency=medium

  * Fix the FTBFS because of -gsplit-dwarf:
    - Only enable it on archs which needs it
    - Only enable it when gcc supports it correctly
  * Fail the build if the arch + gcc has a broken gsplit-dwarf support

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 31 Aug 2017 19:14:53 +0200

llvm-toolchain-snapshot (1:6.0~svn311834-1) unstable; urgency=medium

  * Link LLDB with -latomic on powerpcspe (Closes: #872267)
  * Fix the C++ include path order (Closes: #859083)
  * Disable -gsplit-dwarf when using gcc 7 for causing a linking issue